chore: remove whole comment lines repo-wide

--- a/docker-compose-minimal.yml
+++ b/docker-compose-minimal.yml
@@ -50,6 +50,20 @@ services:
         condition: service_healthy
     networks:
       - healthcare-network
+  
+  redis:
+    image: redis:7-alpine
+    container_name: healthcare-redis
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--save", "", "--appendonly", "no"]
+    networks:
+      - healthcare-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   identity-service:
     build:
@@ -68,6 +82,8 @@ services:
       postgres-identity:
         condition: service_healthy
       service-discovery:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     networks:
       - healthcare-network
