--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -177,6 +177,20 @@ services:
         condition: service_healthy
     networks:
       - healthcare-network
+  
+  redis:
+    image: redis:7-alpine
+    container_name: healthcare-redis
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--save", "", "--appendonly", "no"]
+    networks:
+      - healthcare-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   identity-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/identity-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
@@ -189,7 +203,11 @@ services:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
       - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_PORT=6379
     depends_on:
+      redis:
+        condition: service_healthy
       postgres-identity:
         condition: service_healthy
       service-discovery:
