--- a/identity-service/src/main/resources/application.yml
+++ b/identity-service/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: identity-service
+  data:
+    redis:
+      host: redis
+      port: 6379
   datasource:
     url: jdbc:postgresql://postgres-identity:5432/healthcare_identity
     username: postgres
