--- a/identity-service/Dockerfile
+++ b/identity-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-jdk-jammy AS build
+FROM eclipse-temurin:21-jdk-alpine AS build
 WORKDIR /workspace/app
 
 COPY build.gradle settings.gradle* ./
@@ -11,10 +11,11 @@ RUN ./gradlew :identity-service:dependencies --no-daemon || true
 
 COPY identity-service/src identity-service/src
 ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true"
-RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :identity-service:build -x test --no-daemon --build-cache --parallel
+RUN --mount=type=cache,target=/root/.gradle/caches \
+    --mount=type=cache,target=/root/.gradle/wrapper \
+    ./gradlew :identity-service:build -x test --no-daemon --build-cache --parallel
 
-FROM eclipse-temurin:17-jre-jammy
-VOLUME /tmp
+FROM gcr.io/distroless/java21-debian12:nonroot
 ARG JAR_FILE=identity-service/build/libs/*.jar
 COPY --from=build /workspace/app/${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "/app.jar"]
