--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
-
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.workers.max=4
 
