--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ env:
   GRADLE_OPTS: -Xmx2048m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true
 
 jobs:
-  # Detect changed services for conditional builds
   detect-changes:
     runs-on: ubuntu-latest
     outputs:
@@ -89,7 +88,6 @@ jobs:
               - 'settings.gradle'
               - 'gradle/**'
 
-  # Build and test Java services in parallel
   build-services:
     needs: detect-changes
     runs-on: ubuntu-latest
@@ -165,7 +163,6 @@ jobs:
           path: ${{ matrix.service }}/build/test-results/
           retention-days: 7
 
-  # Build Docker images with advanced caching
   build-docker:
     needs: [detect-changes, build-services]
     runs-on: ubuntu-latest
@@ -192,7 +189,6 @@ jobs:
           SERVICE="${{ matrix.service }}"
           ROOT_CHANGED="${{ needs.detect-changes.outputs.root }}"
           
-          # Get the service-specific output
           if [ "$SERVICE" == "api-gateway" ]; then
             SERVICE_CHANGED="${{ needs.detect-changes.outputs.api-gateway }}"
           elif [ "$SERVICE" == "service-discovery" ]; then
@@ -237,19 +233,20 @@ jobs:
             image=moby/buildkit:latest
             network=host
 
-      - name: Log in to Docker Hub (if needed)
+      - name: Log in to Docker registry
         if: steps.should-build.outputs.should_build == 'true' && github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ secrets.DOCKER_REGISTRY != '' && secrets.DOCKER_REGISTRY || 'docker.io' }}
 
       - name: Extract metadata
         if: steps.should-build.outputs.should_build == 'true'
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_REGISTRY }}/${{ matrix.service }}
+          images: ${{ secrets.DOCKER_REGISTRY != '' && format('{0}/{1}/{2}', secrets.DOCKER_REGISTRY, secrets.DOCKER_USERNAME, matrix.service) || format('{0}/{1}', secrets.DOCKER_USERNAME, matrix.service) }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -271,7 +268,6 @@ jobs:
           build-args: |
             BUILDKIT_INLINE_CACHE=1
 
-  # Build frontend
   build-frontend:
     needs: detect-changes
     runs-on: ubuntu-latest
@@ -309,11 +305,10 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ secrets.DOCKER_REGISTRY }}/frontend:latest
+          tags: ${{ secrets.DOCKER_REGISTRY != '' && format('{0}/{1}/frontend:latest', secrets.DOCKER_REGISTRY, secrets.DOCKER_USERNAME) || format('{0}/frontend:latest', secrets.DOCKER_USERNAME) }}
           cache-from: type=gha,scope=frontend
           cache-to: type=gha,mode=max,scope=frontend
 
-  # Integration tests (optional - can be run separately)
   integration-tests:
     needs: [build-docker, build-frontend]
     runs-on: ubuntu-latest
@@ -333,7 +328,6 @@ jobs:
 
       - name: Run integration tests
         run: |
-          # Add your integration test commands here
           echo "Integration tests would run here"
 
       - name: Stop services
