--- a/service-discovery/Dockerfile
+++ b/service-discovery/Dockerfile
@@ -6,18 +6,16 @@ COPY gradlew ./
 COPY gradle gradle
 RUN chmod +x ./gradlew
 
+RUN --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew --version || true
+
 COPY service-discovery/build.gradle service-discovery/
 
-RUN --mount=type=cache,target=/root/.gradle/caches \
-    --mount=type=cache,target=/root/.gradle/wrapper \
-    ./gradlew :service-discovery:dependencies --no-daemon || true
+RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :service-discovery:dependencies --no-daemon || true
 
 COPY service-discovery/src service-discovery/src
 
 ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true"
-RUN --mount=type=cache,target=/root/.gradle/caches \
-    --mount=type=cache,target=/root/.gradle/wrapper \
-    ./gradlew :service-discovery:build -x test --no-daemon --build-cache --parallel
+RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :service-discovery:build -x test --no-daemon --build-cache --parallel
 
 FROM gcr.io/distroless/java21-debian12:nonroot
 ARG JAR_FILE=service-discovery/build/libs/*.jar
