--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -6,14 +6,16 @@ COPY gradlew ./
 COPY gradle gradle
 RUN chmod +x ./gradlew
 
+RUN --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew --version || true
+
 COPY config-server/build.gradle config-server/
-RUN ./gradlew :config-server:dependencies --no-daemon || true
+
+RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :config-server:dependencies --no-daemon || true
 
 COPY config-server/src config-server/src
-ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true"
-RUN --mount=type=cache,target=/root/.gradle/caches \
-    --mount=type=cache,target=/root/.gradle/wrapper \
-    ./gradlew :config-server:build -x test --no-daemon --build-cache --parallel
+
+ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true"
+RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :config-server:build -x test --no-daemon --build-cache --parallel
 
 FROM gcr.io/distroless/java21-debian12:nonroot
 ARG JAR_FILE=config-server/build/libs/*.jar
