--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,24 +147,40 @@ jobs:
         if: steps.should-build.outputs.should_build == 'true'
         run: chmod +x gradlew
 
-      - name: Build with Gradle
+      - name: Build and test with Gradle
         if: steps.should-build.outputs.should_build == 'true'
-        run: ./gradlew :${{ matrix.service }}:build -x test --no-daemon --build-cache --parallel
-
-      - name: Run tests
-        if: steps.should-build.outputs.should_build == 'true'
-        run: ./gradlew :${{ matrix.service }}:test --no-daemon --build-cache --parallel
+        run: ./gradlew :${{ matrix.service }}:build --no-daemon --build-cache --parallel
 
       - name: Upload test results
         if: always() && steps.should-build.outputs.should_build == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: test-results-${{ matrix.service }}
-          path: ${{ matrix.service }}/build/test-results/
+          path: ${{ matrix.service }}/build/test-results/**/*.xml
           retention-days: 7
+          if-no-files-found: ignore
+
+      - name: Publish test results
+        if: always() && steps.should-build.outputs.should_build == 'true'
+        uses: EnricoMi/publish-unit-test-result-action@v3
+        with:
+          files: ${{ matrix.service }}/build/test-results/**/*.xml
+          check_name: Test Results (${{ matrix.service }})
+          comment_mode: off
+          report_individual_runs: false
+
+      - name: Cache build artifacts
+        if: steps.should-build.outputs.should_build == 'true'
+        uses: actions/cache@v4
+        with:
+          path: ${{ matrix.service }}/build/libs/*.jar
+          key: ${{ runner.os }}-${{ matrix.service }}-jar-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.service }}-jar-
 
   build-docker:
     needs: [detect-changes, build-services]
+    if: always()
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
