Apply industry best practices to all Dockerfiles
Based on research from Google, Netflix, Amazon, and Microsoft:

- Improve JAR file handling: use find to explicitly select correct JAR
- Better stage naming: builder instead of build
- Add explicit WORKDIR in runtime stage
- Combine build and JAR copy commands (fewer layers)
- Follow distroless image best practices
- Align with Docker official best practices

All 11 service Dockerfiles optimized with industry standards.
Added comprehensive documentation on industry best practices.

--- a/identity-service/Dockerfile
+++ b/identity-service/Dockerfile
@@ -1,23 +1,27 @@
-FROM eclipse-temurin:21-jdk-alpine AS build
+FROM eclipse-temurin:21-jdk-alpine AS builder
 WORKDIR /workspace/app
 
-COPY build.gradle settings.gradle* ./
-COPY gradlew ./
+COPY build.gradle settings.gradle gradlew ./
 COPY gradle gradle
-RUN chmod +x ./gradlew
+RUN chmod +x gradlew
 
-RUN --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew --version || true
+RUN --mount=type=cache,target=/root/.gradle/wrapper \
+    ./gradlew --version || true
 
 COPY identity-service/build.gradle identity-service/
-
-RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :identity-service:dependencies --no-daemon || true
+RUN --mount=type=cache,target=/root/.gradle/caches \
+    --mount=type=cache,target=/root/.gradle/wrapper \
+    ./gradlew :identity-service:dependencies --no-daemon || true
 
 COPY identity-service/src identity-service/src
 
 ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true"
-RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :identity-service:build -x test --no-daemon --build-cache --parallel
+RUN --mount=type=cache,target=/root/.gradle/caches \
+    --mount=type=cache,target=/root/.gradle/wrapper \
+    ./gradlew :identity-service:build -x test --no-daemon --build-cache --parallel && \
+    find identity-service/build/libs -name "*.jar" -not -name "*-plain.jar" -exec cp {} app.jar \;
 
 FROM gcr.io/distroless/java21-debian12:nonroot
-ARG JAR_FILE=identity-service/build/libs/*.jar
-COPY --from=build /workspace/app/${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "/app.jar"]
+WORKDIR /app
+COPY --from=builder /workspace/app/app.jar app.jar
+ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "app.jar"]
