--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,8 +111,35 @@ jobs:
       - name: Check if service should be built
         id: should-build
         run: |
-          CHANGED_SERVICES="${{ needs.detect-changes.outputs.services }}"
-          if [[ "$CHANGED_SERVICES" == "[]" ]] || [[ "$CHANGED_SERVICES" == *"${{ matrix.service }}"* ]]; then
+          SERVICE="${{ matrix.service }}"
+          SERVICE_CHANGED="false"
+          ROOT_CHANGED="${{ needs.detect-changes.outputs.root }}"
+          
+          if [ "$SERVICE" == "api-gateway" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.api-gateway }}"
+          elif [ "$SERVICE" == "service-discovery" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.service-discovery }}"
+          elif [ "$SERVICE" == "config-server" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.config-server }}"
+          elif [ "$SERVICE" == "identity-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.identity-service }}"
+          elif [ "$SERVICE" == "patient-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.patient-service }}"
+          elif [ "$SERVICE" == "doctor-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.doctor-service }}"
+          elif [ "$SERVICE" == "appointment-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.appointment-service }}"
+          elif [ "$SERVICE" == "billing-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.billing-service }}"
+          elif [ "$SERVICE" == "room-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.room-service }}"
+          elif [ "$SERVICE" == "equipment-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.equipment-service }}"
+          elif [ "$SERVICE" == "notification-service" ]; then
+            SERVICE_CHANGED="${{ needs.detect-changes.outputs.notification-service }}"
+          fi
+          
+          if [[ "$SERVICE_CHANGED" == "true" ]] || [[ "$ROOT_CHANGED" == "true" ]]; then
             echo "should_build=true" >> $GITHUB_OUTPUT
             echo "✅ ${{ matrix.service }} will be built"
           else
@@ -147,7 +174,7 @@ jobs:
         if: steps.should-build.outputs.should_build == 'true'
         run: chmod +x gradlew
 
-      - name: Build and test with Gradle
+      - name: Build and run tests with Gradle
         if: steps.should-build.outputs.should_build == 'true'
         run: ./gradlew :${{ matrix.service }}:build --no-daemon --build-cache --parallel
 
@@ -244,10 +271,6 @@ jobs:
       - name: Set up Docker Buildx
         if: steps.should-build.outputs.should_build == 'true'
         uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:latest
-            network=host
 
       - name: Log in to Docker registry
         if: steps.should-build.outputs.should_build == 'true' && github.event_name != 'pull_request'
@@ -315,15 +338,36 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to Docker registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ secrets.DOCKER_REGISTRY != '' && secrets.DOCKER_REGISTRY || 'docker.io' }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKER_REGISTRY != '' && format('{0}/{1}/frontend', secrets.DOCKER_REGISTRY, secrets.DOCKER_USERNAME) || format('{0}/frontend', secrets.DOCKER_USERNAME) }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ secrets.DOCKER_REGISTRY != '' && format('{0}/{1}/frontend:latest', secrets.DOCKER_REGISTRY, secrets.DOCKER_USERNAME) || format('{0}/frontend:latest', secrets.DOCKER_USERNAME) }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=frontend
           cache-to: type=gha,mode=max,scope=frontend
+          platforms: linux/amd64
 
   integration-tests:
     needs: [build-docker, build-frontend]
