Apply 2025 best practices and optimizations
- Update Spring Boot to 3.3.5 and Spring Cloud to 2023.0.3
- Optimize HikariCP connection pooling for all services
- Enable JPA batch processing and query optimization
- Add Caffeine caching with CacheConfig classes
- Optimize frontend: strict TypeScript, code splitting, React Query caching
- Improve nginx config with gzip, caching, and security headers
- Optimize Dockerfiles with health checks
- Remove unnecessary documentation and optimization scripts
- Clean up logging configurations

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -57,6 +57,16 @@ spring:
             - StripPrefix=1
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+        - name: Retry
+          args:
+            retries: 3
+            statuses: BAD_GATEWAY,GATEWAY_TIMEOUT
+            methods: GET,POST
+            backoff:
+              firstBackoff: 50ms
+              maxBackoff: 500ms
+              factor: 2
+              basedOnPreviousValue: false
       globalcors:
         corsConfigurations:
           '[/**]':
@@ -71,6 +81,7 @@ spring:
               - OPTIONS
             allowedHeaders: "*"
             allowCredentials: true
+            maxAge: 3600
 
 eureka:
   client:
