--- a/billing-service/src/main/resources/application.yml
+++ b/billing-service/src/main/resources/application.yml
@@ -9,13 +9,34 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      leak-detection-threshold: 60000
+      pool-name: BillingHikariCP
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: false
+        jdbc:
+          batch_size: 20
+          order_inserts: true
+          order_updates: true
+        jdbc.batch_versioned_data: true
+        generate_statistics: false
+        cache:
+          use_second_level_cache: true
+          use_query_cache: true
+          provider_class: org.hibernate.cache.jcache.JCacheRegionFactory
+        connection:
+          provider_disables_autocommit: true
 
 eureka:
   client:
@@ -24,9 +45,6 @@ eureka:
   instance:
     prefer-ip-address: true
 
-logging:
-  level:
-    com.healthcare: DEBUG
 
 
 management:
