--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,28 +3,43 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
-RUN --mount=type=cache,target=/root/.npm \
-    npm ci --prefer-offline --no-audit
 
+# Install dependencies with cache
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci --prefer-offline --no-audit --frozen-lockfile
+
+# Copy source files
 COPY . .
+
+# Build with optimizations
 RUN npm run build
 
+# Production stage
 FROM nginx:alpine
 
+# Remove default config
 RUN rm -rf /etc/nginx/conf.d/default.conf
 
+# Copy built files and nginx config
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Set permissions
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /etc/nginx/conf.d && \
     touch /var/run/nginx.pid && \
     chown -R nginx:nginx /var/run/nginx.pid /var/cache/nginx /var/log/nginx
 
+# Security: run as non-root
 USER nginx
 
 EXPOSE 80
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
 
 CMD ["nginx", "-g", "daemon off;"]
 
