--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.6
 # Build stage - optimized for 2025
-FROM eclipse-temurin:21-jdk-alpine3.19 AS builder
+FROM eclipse-temurin:21-jdk-alpine AS builder
 
 LABEL org.opencontainers.image.title="Healthcare API Gateway" \
       org.opencontainers.image.description="API Gateway microservice - 2025 Optimized" \
